Fix spacing

--- a/styles.css
+++ b/styles.css
@@ -71,3 +71,7 @@ main::after {
     display: block;
 }
 
+.Social-links {
+    float: right;
+}
+
